Fixed missing pie-chart in criteria-tab, added collapse-all to scenario, several layout improvements in Users-tab, initialize new user weights to 1 instead of 0.

--- a/MultiCriteriaAnalysis/public/css/style.css
+++ b/MultiCriteriaAnalysis/public/css/style.css
@@ -714,15 +714,19 @@ rect {
 }
 .container3 {
 	background:#89ffa2; /* column 3 background colour */
+    height: 100%;
 }
 .container2 {
 	background:#fff689; /* column 2 background colour */
+    height: 100%;
 }
 .container1 {
 	background:#ffc7a7; /* column 1 background colour */
+    height: 100%;
 }
 .container0 {
 	background:#ffa7a7; /* column 1 background colour */
+    height: 100%;
 }
 
 .list-group {
